--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TeeTime | DiscGolf</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body id="b">
+    <div id="root" class="container container-fluid"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
